Lau 264 reenable fortify (#82)
* LAU-75: Updating security scan false positives.

* LAU-264: Update to renable fortity.

* LAU-264: Switch fortify to use demo branch.

* LAU-264: Ah you can't switch branch.

* LAU-264: Updating fortify library.

* LAU-264: Remove duplicate fortify config.