@@ -368,7 +368,7 @@ dependencies {
 
     implementation group: 'com.h2database', name: 'h2', version: '2.1.210'
 
-    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
+    testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
     integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
     integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
@@ -472,12 +472,6 @@ task migratePostgresDatabase(type: FlywayMigrateTask) {
         url = "jdbc:postgresql://${dburl}"
     }
 }
-
-//task fortifyScan(type: JavaExec)  {
-//  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
-//  classpath += sourceSets.test.runtimeClasspath
-//  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
-//}
 
 mainClassName = 'uk.gov.hmcts.reform.laubackend.idam.Application'
 
